--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Ecompany Argentina - Mejores Accesorios! 😎</title>
+    <meta property="og:title" content="Ecompany Argentina" />
+    <meta property="og:type" content="products.objects"/>
+    <meta property="og:url" content="https://ecompanyargentina.netlify.app/"/>
+    <meta property="og:image" content="https://images.unsplash.com/photo-1546706887-a24528987a75?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
 </head>
 <body class="container-grid">
     <!-- inicio de navbar -->
@@ -25,10 +29,10 @@
               <div class="collapse navbar-collapse show" id="navbarLight">
                 <ul class="navbar-nav me-auto mb-2 mb-xl-0">
                   <li class="nav-item">
-                    <a class="nav-link active" href=".\Pages\productos.html"><i class="fas fa-mobile-alt"></i>Productos</a>
+                    <a class="nav-link " href=".\Pages\ofertas.html"><i class="fas fa-credit-card"></i>Ofertas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href=".\Pages\ofertas.html"><i class="fas fa-credit-card"></i>Ofertas</a>
+                    <a class="nav-link" href=".\Pages\productos.html"><i class="fas fa-mobile-alt"></i>Productos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link"  href=".\Pages\sobrenosotros.html"><i class="fas fa-envelope"></i>Sobre Nosotros</a>
@@ -37,7 +41,7 @@
                     <a class="nav-link" href=".\Pages\contacto.html"><i class="fa fa-user"></i>Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-cart-plus"></i></i>Compras</a>
+                    <a class="nav-link" href=".\Pages\compras.html"><i class="fas fa-cart-plus"></i></i>Compras</a>
                   </li>
                 </ul>
                 <form class="d-flex">
